--- a/resources/assets/sass/css/right.css
+++ b/resources/assets/sass/css/right.css
@@ -38,6 +38,13 @@
 
 /* chat */
 
+.complet-content {
+    height: calc(100% - 60px);
+    display: flex;
+    position: relative;
+    background-color: #f7f7f7;
+}
+
 .wrap-content {
     height: calc(100% - 120px);
     display: flex;
@@ -48,6 +55,12 @@
     width: 100%;
     padding: 10px 100px;
     overflow-y: auto;
+}
+
+.complete_dynamic_content {
+    width: 100%;
+    overflow-y: auto;
+    padding: 10px;
 }
 
 .chat {
@@ -224,11 +237,7 @@
 .information {
     width: 100%;
     height: 100%;
-    position: relative;
     background: #f7f7f7;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
 }
 
 .information h1 {
@@ -239,8 +248,8 @@
 
 .information_content {
     background-color: #ffffff;
-    margin: 20px 20px 0 20px;
     padding: 20px;
+    margin-bottom: 20px;
 }
 
 /* message */
@@ -289,6 +298,7 @@ table {
     border-collapse: collapse;
     margin: auto;
     box-shadow: 0px 0px 2px 0px rgba(119,119,119, .5);
+    transition: all 2s ease-out;
 }
 
 /* Zebra striping */
