--- a/resources/assets/sass/css/scrollbar.css
+++ b/resources/assets/sass/css/scrollbar.css
@@ -1,5 +1,6 @@
 body::-webkit-scrollbar,
 .contact-list::-webkit-scrollbar,
+.complete_dynamic_content::-webkit-scrollbar,
 .dynamic_content::-webkit-scrollbar{
 		width: 0.4em;
 		height: 0.4em;
@@ -7,11 +8,12 @@ body::-webkit-scrollbar,
 
 body::-webkit-scrollbar-thumb,
 .contact-list::-webkit-scrollbar-thumb,
+.complete_dynamic_content::-webkit-scrollbar-thumb,
 .dynamic_content::-webkit-scrollbar-thumb {
 		background-color: rgba(0,0,0,0.2);
 }
 
-.contact-list, .dynamic_content {
+.contact-list, .dynamic_content, .complete_dynamic_content {
       scrollbar-arrow-color: #009688;
       scrollbar-face-color: #eeeeee;
       scrollbar-highlight-color: #eeeeee;
